public static class ConstStrings
{
    public static string PLAYER_ANIMATOR_X = "x";
    public static string PLAYER_ANIMATOR_y = "y";
    public static string PLAYER_ANIMATOR_LASTX = "Lastx";
    public static string PLAYER_ANIMATOR_LASTY = "Lasty";
    public static string PLAYER_ANIMATOR_SPEED = "Speed";
    public static string PLACE_TOWER_ANIMATOR_ISIN = "IsIn";
    public static string TOWER_LEVEL_UP = "Anim";
    public static string TOWER_RESET = "Reset";
    public static string TOWER_LEVEL_UP_EVOLVE1 = "Anim1";
    public static string TOWER_LEVEL_UP_EVOLVE2 = "Anim2";
    public static string BUILD_TOWER_ANIM_DESTROY = "Destroy";
    public static string TOWER_GUARD_DOOR = "Door";
    public static string INFO_PANEL_ANIMATOR_IN = "In";
    public static string INFO_PANEL_ANIMATOR_OUT = "Out";
    public static string INFO_PANEL_ANIMATOR_ISIN = "IsIn";
}
